--- a/resumestyle.css
+++ b/resumestyle.css
@@ -3,9 +3,11 @@
     margin:0;
     padding:0;
     text-decoration: none;
+    list-style: none;
     
   }
- .header{
+ header{
+    margin-top: 75px;
     min-height: 100vh;
     background-image: url("portfolio_image.jpg");
     width:100%;
@@ -50,7 +52,7 @@ nav ul{
 nav ul li{
     display:inline-block;
     margin:0 5px;
-    line-height: 60px;
+    line-height: 80px;
 }
 nav ul li a{
     margin-left: 20px;
@@ -58,7 +60,7 @@ nav ul li a{
     padding:7px 13px;
     font-size: 17px;
     font-weight: bold;
-    
+    border-radius: 9px;
     }
 nav ul li a:hover{
     background-color: orange;
@@ -66,6 +68,7 @@ nav ul li a:hover{
     color: black;
     transition:1s;
 }
+
 
 body{
     background-color: black;
@@ -104,22 +107,36 @@ p{
         
  }
 
- @media screen and (max-width: 700px) {
-    .header{
-        width:100%;
-        height:100%;
-    }
-    nav{
-        height:170px;
+ @media only screen and (max-width: 600px) {
+    header{
+        margin-top: 50px;
+        min-height: 90vh;
     }
     .imagetext{
-        margin-top: 160px;
-        
+        margin-top: 170px;
+        margin-left: 25px;
     }
     .imagetext h1{
-        font-size:50px;
+        font-size: 40px;
     }
+    .imagetext p{
+        font-size: 25px;
+    }
+    button{
+        height: 40px;
+        width: 80px;
+        border-radius: 15px;
+    }
+    nav{
+        height: 150px;
+    }
+    main h2{
+        margin-top: 135px;
+    }
+    p{
+        margin: 8px;
+        padding: 8px;
+    }
+       
     
-
- }
-
+}
